# model_hub

./: .gitignore  README.md  README_DEV.md  docker-compose.yml  generate_traces.py  pyproject.toml
alembic/: env.py
alembic/versions/: 96a43624254a_initial_migration.py
check-list/: coding_checklist.md  product_design_checklist.md
docker/infra/: Dockerfile  start-all.sh
docker/signoz/: clickhouse-config.xml  nginx-frontend.conf  otel-collector-config.yaml
docker/signoz/data/: signoz.db
docs/: API_SYNC_DOWNLOAD.md  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  design.md  model_hub_design_p1.md
docs/check-list/: review-checklist.md  system_design_checklist.md
docs/rules/: CODING.md  REVIEW.md  SYSTEM_DESIGN.md
proto/v1/: hub_service.proto
rules/: PRODUCT_DESIGN.md
scripts/: start_services.sh
src/common/: config.py  db.py  hf_client.py  job_queue.py  models.py
src/hub_service/: api.py  main.py  schemas.py
src/worker_service/: main.py  tasks.py
tests/: test_api_manual.py
